
  * Multi-arch support:
    + debian/control: Add Multi-Arch and Pre-Depends fields to all
      packages with shared libraries.
    + debian/*.install: replace usr/lib/ with usr/lib/*/, but keep
      GObject Introspection .typelib files in /usr/lib
    + debian/rules: adapt libdir and libexecdir to multi-arch.
  * debian/control:
    + Add myself to Uploaders.

 -- Alberto Garcia <berto@igalia.com>  Tue, 26 Nov 2013 16:55:59 +0200

webkitgtk (2.3.2-1) experimental; urgency=low

  * New upstream release.
  * debian/patches/40_hppa_platform_h.patch,
    debian/patches/41_hppa_build_fix.patch,
    debian/patches/50_bsd-hurd-build-fix.patch,
    debian/patches/60_add-missing-include.patch,
    debian/patches/61_add-another-missing-include.patch,
    debian/patches/70_Add-stubs-for-missing-symbols-in-dom-bindings.patch:
    + Removed, merged upstream.
  * debian/patches/30_gtkdoc_fixxref_warnings.patch:
    + Drop unapplied patch that we don't need anymore.
  * debian/patches/13_thread-safe-icon-db.patch:
    + Drop unapplied patch that was fixed upstream a long time ago.
  * debian/patches/12_large-mem-page.patch:
    + Drop unapplied patch, it hasn't been applied in quite some time
      and we haven't heard of any complains. Besides, the patch no
      longer applies as the code it touched has been largely reworked
      or removed.
  * debian/patches/14_ia64-wide-ptr.patch,
    debian/patches/15_ia64-use-system-malloc.patch:
    + Dropped. The former wasn't been applied and needs rebasing if still
      needed. The second is probably useless given all the other patches
      that were needed on IA64 are gone. It may not be needed anymore as
      the code that the patch tries to workaround may be fixed now.
      If these or any other patches are needed for IA64, they should be
      sent upstream so we don't run into problems like this again.
  * debian/rules:
    + Disable debugging symbols on powerpcspe. Closes: #696472.
  * debian/libwebkitgtk-1.0-0.symbols,