@@ -8,6 +8,7 @@ webkitgtk (2.3.2-2) UNRELEASED; urgency=low
     + debian/rules: adapt libdir and libexecdir to multi-arch.
   * debian/control:
     + Add myself to Uploaders.
+  * debian/rules: support noopt and debug in DEB_BUILD_OPTIONS.
 
  -- Alberto Garcia <berto@igalia.com>  Tue, 26 Nov 2013 16:55:59 +0200
 
